--- a/Lil-Sherpa/Base.lproj/Main.storyboard
+++ b/Lil-Sherpa/Base.lproj/Main.storyboard
@@ -518,7 +518,7 @@
                                 <rect key="frame" x="16" y="94" width="568" height="506"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="activityCell" rowHeight="104" id="2p4-ng-gej" customClass="activityCell" customModule="Lil_Sherpa" customModuleProvider="target">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="activityCell" rowHeight="104" id="2p4-ng-gej" customClass="ActivityCell" customModule="Lil_Sherpa" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="568" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="2p4-ng-gej" id="2GL-Cr-9Gt">
@@ -601,12 +601,12 @@
                                             </variation>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="activityDurationLabel" destination="yGe-uZ-KcR" id="9io-bv-lkK"/>
-                                            <outlet property="activityLocationLabel" destination="nWd-EN-xCu" id="fd3-2P-Frm"/>
-                                            <outlet property="activityNameLabel" destination="7ny-0M-MsW" id="ibE-ID-H2U"/>
-                                            <outlet property="activityNeighborhoodLabel" destination="xEx-Pc-Xrn" id="61Y-2k-0pD"/>
-                                            <outlet property="activityStartTimeLabel" destination="FZZ-Xj-xZZ" id="4Bo-l4-j8i"/>
-                                            <outlet property="activityTeacherLabel" destination="hEg-cO-Jgf" id="fOr-E9-71R"/>
+                                            <outlet property="activityDurationLabel" destination="yGe-uZ-KcR" id="hPV-vX-4Xq"/>
+                                            <outlet property="activityLocationLabel" destination="nWd-EN-xCu" id="Gpv-ZR-4Lv"/>
+                                            <outlet property="activityNameLabel" destination="7ny-0M-MsW" id="Zms-75-ena"/>
+                                            <outlet property="activityNeighborhoodLabel" destination="xEx-Pc-Xrn" id="3OM-xV-Z0F"/>
+                                            <outlet property="activityStartTimeLabel" destination="FZZ-Xj-xZZ" id="wzl-mB-45z"/>
+                                            <outlet property="activityTeacherLabel" destination="hEg-cO-Jgf" id="hBM-jx-onC"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
