--- a/Lil-Sherpa/Base.lproj/Main.storyboard
+++ b/Lil-Sherpa/Base.lproj/Main.storyboard
@@ -607,6 +607,7 @@
                                             <outlet property="activityNeighborhoodLabel" destination="xEx-Pc-Xrn" id="3OM-xV-Z0F"/>
                                             <outlet property="activityStartTimeLabel" destination="FZZ-Xj-xZZ" id="wzl-mB-45z"/>
                                             <outlet property="activityTeacherLabel" destination="hEg-cO-Jgf" id="hBM-jx-onC"/>
+                                            <segue destination="jBr-9O-kDu" kind="show" identifier="showActivityDetailSegue" id="P32-Hd-jPb"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -651,6 +652,39 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7uc-uB-DUF" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4545" y="1075"/>
+        </scene>
+        <!--ActivityDetail View Controller-->
+        <scene sceneID="kIu-VZ-WnT">
+            <objects>
+                <viewController id="jBr-9O-kDu" userLabel="ActivityDetail View Controller" customClass="ActivityDetailViewController" customModule="Lil_Sherpa" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="0Ye-81-2PX"/>
+                        <viewControllerLayoutGuide type="bottom" id="hPo-Lk-uXD"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="x4t-N9-SSE">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WL9-l1-aVe">
+                                <rect key="frame" x="279" y="289" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerX" secondItem="WL9-l1-aVe" secondAttribute="centerX" id="8Xu-vL-UzY"/>
+                            <constraint firstAttribute="centerY" secondItem="WL9-l1-aVe" secondAttribute="centerY" constant="0.5" id="Zof-Co-ZnL"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="activityNameLabel" destination="WL9-l1-aVe" id="hmB-xn-d5h"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="BMN-3h-FNx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5227" y="1075"/>
         </scene>
         <!--RefineSearch View Controller-->
         <scene sceneID="K7u-eQ-o1c">
